--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,29 @@ code {
     monospace;
 }
 
+.cambioBotonSolo{
+  width: 100%;
+  height: 100%;  
+}
+.contorno{
+  border-radius: 10%;
+  padding: 5%;
+  border: 1px solid;
+}
+
+.relleno{
+  border-radius: 6px;
+  border: none;
+  width: 100%;
+  height: 100%;
+  background: #f60057;
+  font-size: 30px;
+  height: 81px;
+  cursor: pointer;
+}
+
+.relleno:hover{
+  border: none;
+}
+
+
